--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 coverage==6.5.0
 DateTime==4.7
 Django==4.1.5
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 exceptiongroup==1.0.0
 google-api-core==2.10.2
